# stasis

./: .gitignore  LICENSE  README.md  index.html
runtime/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
runtime/src/: binary.ts  bootstrap.ts  index.ts  module.ts  patch-export.ts  types.ts  wrapper.ts
rust/: Cargo.toml
rust-stasis/: Cargo.toml
rust-stasis/src/: global.rs  incoming.rs  lib.rs
rust-stasis/src/tutorial/: t03_global_module.rs
rust/src/: callbacks.rs  data.rs  global.rs  internal_callbacks.rs  lib.rs  outgoing.rs  rt.rs
rust/src/tutorial/: mod.rs  t02_js_functions.rs  t03_global_module.rs
rust/stasis/: Cargo.toml
rust/stasis-internals/: Cargo.toml
rust/stasis-internals/src/: data.rs  incoming.rs  internal_callbacks.rs  lib.rs  outgoing.rs
rust/stasis/src/: callbacks.rs  global.rs  lib.rs
rust/stasis/src/futures/: mod.rs  v01.rs  v02.rs
rust/stasis/src/tutorial/: t01_hello_world.rs  t02_js_functions.rs  t03_global_module.rs
